[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
not_skip = "__init__.py"
use_parentheses = true
known_first_party = ["kerasadf"]
known_third_party = ["hypothesis", "numpy", "pytest", "setuptools", "six", "tensorflow"]

[tool.towncrier]
package = "kerasadf"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changelog.d"
template = "changelog.d/towncrier_template.rst"
issue_format = "`#{issue} <https://github.com/jmaces/keras-adf/issues/{issue}>`_"
title_format = "{version} ({project_date})"
underlines = ["-", "^"]

[[tool.towncrier.section]]
path = ""

[[tool.towncrier.type]]
directory = "breaking"
name = "Backward-incompatible Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true
